 * New config option (mail_priority): if use_x_priority is set to ON, what should the value of X-Priority be? The default is 3 (instead of 0 in previous version, which was misinterpreted by some MTAs)
 * New config option (long_process_timeout): the number of seconds to give long executing pages (like database upgrades) to complete before aborting them (defaults to 0 which is unlimited)
 * Removed config option (mail_send_crlf): having this option off (default) violated RFC 822bis and there shouldn't be any server which required it to be set to off
 * Languages: Updated Dutch, French, German and Italian localisations.
 * Languages: Synchronized localisation files with the English localisation.
 * Security enhancement: it is now impossible to 'fill in' forgotten language strings using GET/POST/COOKIE variables

2003.02.16  -  0.18.0a1

 This release contains literally hundreds, if not thousands, of changes.
 Upcoming releases will hopefully follow a *much* quicker release cycle now
 that we are back on track.

 This marks the first release of Mantis with a completely refactored API
 library.  All the API files are in the core/ directory should you wish to
 examine them in more detail.  The process of cleaning up the APIs and making
 sure all the pages use them is still not quite complete, but we are getting
 close

 Listing every individual change would be unproductive but the key ones are
 listed or summarized below:

 * Behaviour change: made 'normal' the default priority for new bugs
 * Behaviour change: Merged default/config_inc1.php and default/config_inc2.php in config_inc.php in the main directory
 * Behaviour change: Removed f_ prefix from POST and GET field names
 * Changed config options (*_color): now use $g_status_colors['<status color>'] array. For example, $g_new_color is replaced with $g_status_colors['new'].